--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -12,36 +12,36 @@ $form-base-size: 20px;
 
 .field {
   width: 100%;
-  .label {
-    font-family: Avenir;
-    font-style: normal;
-    font-weight: normal;
+  label {
     font-size: $form-base-size;
   }
-  .input {
-  width: 100%;
-  background: #F4F4F4;
-  border-radius: 10px;
-  padding: 8px;
-  margin-bottom: 50px;
-  }
+  .text {
+    display: block;
+    width: 100%;
+    background: #F4F4F4;
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 40px;
+    font-size: 15px;
+    }
 }
-.actions {
-  text-align: center;
-  
-  .submit {
-  width: 80%;
-  padding: 15px;
+
+  .btn {
   background-color: #F8BD1C;
   font-family: Avenir;
   font-style: normal;
   font-weight: 800;
   font-size: $form-base-size;
-  color: #836666;
-  margin-top: 50px;
-}
-}
+  color: #FFFFFF;
+  display: block;
+  margin: auto;
+  width: 80%;
+  height: 60px;
+  border: none;
+  border-radius: 10px;
 
+  
+}
 .check-box{
   width: 20px;
   margin-bottom: 50px;
