--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,20 +3,20 @@
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = render "devise/shared/error_messages", resource: resource
     .field
-      = f.label :email, class: 'label'
+      = f.label :email
       %br/
-      = f.email_field :email, autofocus: true, autocomplete: "email", class: 'input'
+      = f.email_field :email, autofocus: true, autocomplete: "email", class: 'text'
     .field
-      = f.label :password, class: 'label'
+      = f.label :password
       - if @minimum_password_length
         %em
           (#{@minimum_password_length} characters minimum)
       %br/
-      = f.password_field :password, autocomplete: "new-password", class: 'input'
+      = f.password_field :password, autocomplete: "new-password", class: 'text'
     .field
       = f.label :password_confirmation, class: 'label'
       %br/
-      = f.password_field :password_confirmation, autocomplete: "new-password", class: 'input'
+      = f.password_field :password_confirmation, autocomplete: "new-password", class: 'text'
     .actions
-      = f.submit "Sign up", class: 'submit'
+      = f.submit "Sign up", class: 'btn'
   = render "devise/shared/links"
