--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,9 +1,9 @@
 .container
   %h2.title All Borads
   - @articles.each do |article| 
-    .borad
-      .borad-box
-        %p.borad-left board
+    .content
+      .content-box
+        %p.content-left board
         - if user_signed_in? && current_user.articles.exists?(id: article.id)
           .drop-down
             .drop-png
@@ -11,7 +11,7 @@
               .drop-content
                 = link_to  'Edit', edit_article_path(article)
                 = link_to 'Delete', article_path(article), data: { method: 'delete' }
-      %p.borad-content
+      %p.content-writing
         = article.description
       = image_tag 'Oval (1).png', class: 'avater'
 
