--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,14 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     %header.header
-      %h2 Boards
-      = link_to 'ログアウト', destroy_user_session_path 
+      .header-top
+        %h2 Boards
+        .session-box
+          - if user_signed_in?
+            = link_to 'ログアウト', destroy_user_session_path, data: { method: 'delete' }
+          - else
+            = link_to 'ログイン', user_session_path, data: { method: 'post' }
+            = link_to 'サインアップ', new_user_registration_path
       - if flash.present?
         .flash
           - flash.each do |key, value|
