--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -3,6 +3,8 @@
   - @tasks.each do |task| 
     = link_to task_path(task) do
       .content
+        - if task.eyecatch.attached?
+          = image_tag task.eyecatch, class: 'eyecatch'
         .content-box
           %p.content-left 
             = task.title
